# becky-import-addon

./: .gitignore  Makefile.am  README.md  application.ini.in  chrome.manifest.in  configure.ac  install.rdf.in
components/: BeckyAddressBookImporter.cpp  BeckyAddressBookImporter.h  BeckyAddressBooksImporter.cpp  BeckyAddressBooksImporter.h  BeckyFiltersImporter.cpp  BeckyFiltersImporter.h  BeckyImport.cpp  BeckyImport.h  BeckyImportModule.cpp  BeckyImportModule_1_9_2.cpp  BeckyMailImporter.cpp  BeckyMailImporter.h  BeckyProfileMigrator.cpp  BeckyProfileMigrator.h  BeckySettingsImporter.cpp  BeckySettingsImporter.h  BeckyStringBundle.cpp  BeckyStringBundle.h  BeckyUtils.cpp  BeckyUtils.h  BeckyVCardAddress.cpp  BeckyVCardAddress.h  Makefile.am
components/BeckyImport/: BeckyImport.sln  BeckyImport.vcproj.in
content/: migrationOverlay.xul
locale/en-US/: beckyImportMessages.properties
locale/ja/: beckyImport.dtd  beckyImportMessages.properties
m4macros/: thunderbird.m4
test/: addressbooks.test.js  filters.test.js  mail.test.js  migrator.test.js  module.test.js  settings.test.js
test/fixtures/addressbooks/: another.bab
test/fixtures/filters/: IFilter.def
test/fixtures/mailboxes/: Folder.lst  test.bmf
test/fixtures/settings/: Mailbox.ini
